# luz

./: .clang-format  .envrc  .gitignore  README.md  tidy-up
.githooks/: pre-commit
docs/: bom.md  wiring.md
luz/: CMakeLists.txt  sdkconfig  sdkconfig.old
luz/main/: CMakeLists.txt  ble.cc  ble.hh  ble.inl  buffer.cc  buffer.hh  buffer.inl  color.hh  database.cc  database.hh  field.hh  field.inl  idf_component.yml  led.cc  led.hh  luz.cc  packet.cc  packet.hh  placement.hh  protocol.cc  protocol.hh  protocol.inl
luz/main/tests/: CMakeLists.txt  protocol_test.cc
tools/: tidy-up
